--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Please feel free to send a message on LinkedIn if you would like to connect.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
